# standard_atmosphere

./: LICENSE  README.md  pyproject.toml
src/standard_atmosphere/: standard_atmosphere.py
tests/: test_data.csv  test_standard_atmosphere.py
