[project]
name = "standard-atmosphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joaopaulomcc-dev", email = "joaopaulomcc.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
